hw10 test version 2.0.1 author: yixiang

--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,8 @@
 {
-  "op_type": 1,
-  "lines" : 100,
+  "op_type": 0,
+  "lines" : 10000,
   "people_num" : 500,
   "group_num" : 100,
-  "messages_num" : 100
+  "messages_num" : 100,
+  "maxRound" : 10000
 }
